--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -78,7 +78,7 @@ let user = try await VitalNetworkClient.shared.user.create(clientUserId)
 ## Step 3: Making your first API request
 
 :::tip
-You can use our Quickstart project with a complete backend and frontend for you to get a feeling of our API. You can find it [here](https://github.com/tryVital/quickstart). You can also try our iOS demo to explore different ways of interacting with our services. You can find the demo [here](https://github.com/tryVital/vital-ios).
+You can use our [Quickstart project](https://github.com/tryVital/quickstart) with a complete backend and frontend for you to get a feeling of our API. You can also try our [iOS demo](https://github.com/tryVital/vital-ios) to explore different ways of interacting with our services.
 :::
 
 For our first API request, we will our sleeping endpoint. It can be accessed with a call to `/summary/sleep`:
