--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -81,7 +81,7 @@ let user = try await VitalNetworkClient.shared.user.create(clientUserId)
 You can use our [Quickstart project](https://github.com/tryVital/quickstart) with a complete backend and frontend for you to get a feeling of our API. You can also try our [iOS demo](https://github.com/tryVital/vital-ios) to explore different ways of interacting with our services.
 :::
 
-For our first API request, we will our sleeping endpoint. It can be accessed with a call to `/summary/sleep`:
+For our first API request, we will call `/summary/sleep`:
 
 <br />
 
