add whoop to providers list

--- a/docs/providers/Introduction.mdx
+++ b/docs/providers/Introduction.mdx
@@ -16,6 +16,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                |
 | [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              |
 | [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             |
+| [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                |
 | [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   |
 | [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   |
 | [iHealth](https://ihealthlabs.com)                   | `ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches |
@@ -67,6 +68,7 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Renpho](https://renpho.com)                         | Live Refresh |
 | [Strava](https://www.strava.com)                     | Webhooks     |
 | [Wahoo](https://wahoofitness.com)                    | Webhooks     |
+| [Whoop](https://www.whoop.com)                       | Live Refresh |
 | [Zwift](https://zwift.com)                           | Live Refresh |
 | [Withings](https://www.withings.com)                 | Webhooks     |
 | [iHealth](https://ihealthlabs.com)                   | Webhooks     |
