--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -96,8 +96,8 @@ npm dev
 
 ## 3. Creating your first User
 
-When retrieving data or connecting devices, Vital will require an `user_id` as input.
-An `user_id` is a unique representation that we hold for a user. It allows you to fetch all the data for that user.
+When retrieving data or connecting devices, Vital will require a `user_id` as input.
+A `user_id` is a unique representation that we hold for a user. It allows you to fetch data for that user.
 To create a user, you need to pass an unique id (`client_user_id`). This represents the user in your system. Our recommendation is
 to store the Vital `user_id` in your db against the user row.
 
