So it's aligned across

--- a/docs/sdks/iOS.mdx
+++ b/docs/sdks/iOS.mdx
@@ -6,7 +6,7 @@ import { Image } from "@chakra-ui/react";
 
 # iOS
 
-## 1. Intro
+## 1. Introduction
 
 The iOS SDK is split into three main components: VitalCore, VitalHealthKit and VitalDevices. VitalCore holds common components to both VitalHealthKit and VitalDevices. Among other things, it has the network layer that allows us to send data from a device to a server. As their name hint, VitalHealthKit and VitalDevices are an abstraction over HealthKit and specific Bluetooth devices. If your app is generating data independently, you can use VitalCore directly to push data.
 
