--- a/docs/Lab Tests/introduction.mdx
+++ b/docs/Lab Tests/introduction.mdx
@@ -155,3 +155,5 @@ curl --request POST \
 <br />
 
 ## 3. Test Results
+
+Once we have the your user results, we will inform you via a webhook, with the order status set to `completed`. You can then fetch the results by its `id`:
