--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -39,8 +39,8 @@ If you get stuck at any point in the Quickstart, help is just a click away! Join
 
 | Environment        |                                             |                                 |
 | ------------------ | ------------------------------------------- | ------------------------------- |
-| @@FiBox sandbox    | Testing, Connect up to 10 live users        | https://api.tryvital.io         |
-| @@FiZap production | Live environment to use with real customers | https://api.sandbox.tryvital.io |
+| @@FiBox sandbox    | Testing, Connect up to 10 live users        | https://api.sandbox.tryvital.io |
+| @@FiZap production | Live environment to use with real customers | https://api.tryvital.io         |
 
 ## 2. Running Quickstart locally
 
