--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -52,9 +52,9 @@ customizing the `.env` file with your own Vital `API_KEY` and finally, building 
 
 ```bash
 # Note: If on Windows, run
-# git clone -c core.symlinks=true https://github.com/vital/quickstart
+# git clone -c core.symlinks=true https://github.com/tryVital/quickstart
 # instead to ensure correct symlink behavior
-git clone https://github.com/vital/quickstart.git
+git clone https://github.com/tryVital/quickstart.git
 cd backend/python
 
 # Copy the .env.example file to .env, then fill
