--- a/docs/sdks/iOS.mdx
+++ b/docs/sdks/iOS.mdx
@@ -440,7 +440,7 @@ cancellable = VitalHealthKitClient.shared.status.sink { value in
 
 ### 1. Background Delivery
 
-You can enable the SDK to deliver HealthKit data in background. This provides a more seamlessly experience, since the user doesn't need to open your app to sync data. Start by enabling "Background Delivery" in the app capabilities:
+You can enable the SDK to deliver HealthKit data in background. This provides a more seamless experience, since the user doesn't need to open your app to sync data. Start by enabling "Background Delivery" in the app capabilities:
 
 <Image src="/img/iOS/health_kit_permission_background_delivery.png" />
 
